chore: jpackage fat jar